--- a/mandelbulber2/formula/ui/jos_kleinian_v3.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian_v3.ui
@@ -1964,6 +1964,9 @@ offset:</string>
    </item>
    <item>
     <widget class="MyGroupBox" name="groupCheck_fold_color_aux_color_enabled_false">
+     <property name="toolTip">
+      <string>Normal use, set aux.color start  iterations to last iteration of this formula</string>
+     </property>
      <property name="title">
       <string>aux color c&amp;omponents</string>
      </property>
