--- a/mandelbulber2/formula/ui/transf_add_constant_mod3.ui
+++ b/mandelbulber2/formula/ui/transf_add_constant_mod3.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>826</width>
-    <height>1757</height>
+    <height>1825</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -165,14 +165,14 @@
    <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
      <property name="text">
-      <string notr="true">c z</string>
+      <string notr="true">change from c  to z</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
      <property name="text">
-      <string notr="true">r rr</string>
+      <string notr="true">change from r  to rr</string>
      </property>
     </widget>
    </item>
@@ -181,7 +181,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_261">
        <property name="text">
-        <string>radr:</string>
+        <string>radrus condition:</string>
        </property>
       </widget>
      </item>
@@ -216,7 +216,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_64" columnstretch="0,0,0,0">
+    <layout class="QGridLayout" name="gridLayout_64" columnstretch="0,0,0,1">
      <property name="spacing">
       <number>2</number>
      </property>
@@ -371,16 +371,6 @@
       <widget class="QLabel" name="label_258">
        <property name="text">
         <string>scale1:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
